# cdf_skiplist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
drivertest/: test1.cpp  test2.cpp
plot/: bar_chart.py  common.py  h-speedup.csv  h-speedup.py  h.csv  h.py  hot-normal-speedup.csv  hot-normal-speedup.py  hot-normal.csv  hot-normal.py  hot-zipf-speedup.csv  hot-zipf-speedup.py  hot-zipf.csv  hot-zipf.py  normal-speedup.csv  normal-speedup.py  normal.csv  normal.py  p-speedup.csv  p-speedup.py  p.csv  p.py  plot.cmd  real-set-speedup.py  real-set.py  uniform-speedup.csv  uniform-speedup.py  uniform.csv  uniform.py  zipf-speedup.csv  zipf-speedup.py  zipf.csv  zipf.py
run/: compute-cdf.r  gen.sh  mix-cdf.r  mix.py  normal  normal-run.sh  run.sh  start.sh  unif  unif-gen.sh  unif-run.sh  zipf  zipf-run.sh
run/normal-1/: normal.r
run/normal-10/: normal.r
run/normal-2/: normal.r
run/normal-3/: normal.r
run/normal-4/: normal.r
run/normal-5/: normal.r
run/normal-6/: normal.r
run/normal-7/: normal.r
run/normal-8/: normal.r
run/normal-9/: normal.r
run/unif-15/: unif.r
run/unif-18/: unif.r
run/unif-21/: skiplist.exe.stackdump  unif.r
run/unif-24/: skiplist.exe.stackdump  unif.r
run/zipf-1/: zipf.r
run/zipf-3/: zipf.r
run/zipf-5/: zipf.r
run/zipf-7/: zipf.r
src/: CMakeLists.txt  ai.cpp  baseline.cpp  config-uid.cpp  config.cpp  config15.cpp  config18.cpp  config21.cpp  config24.cpp  kde.py  merge.py  merge_tool.cpp  skiplist_test.cpp
test/: test1.cpp  test2.cpp
unittest/: CMakeLists.txt  harness.h  test1.cpp  test2.cpp
(+21 files in other folders)
