CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
PROJECT(skiplist)

SET(CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -Wextra" CACHE INTERNAL "compiler options" FORCE)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
SET(CMAKE_CXX_FLAGS_RELEASE "-O3" CACHE INTERNAL "compiler options" FORCE)
IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF ()
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/googletest/googletest/include/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/cmake-build-debug/thirdparty/googletest/googlemock/gtest/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/spdlog/include/)


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/)
ADD_SUBDIRECTORY(thirdparty/googletest)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
